# angelscript-web

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  main.cpp  readme.md  vcpkg.json
assets/: editor.html  main.html
